# streamlit_MCML_classifier

./: README.md  classifier.py  lulc3_model.pkl  packages.txt  pyproject.toml
