[tool.poetry]
name = "Streamlit_Classifer"
version = "0.1.0"
description = ""
authors = ["diane.bailleul.pro@gmail.com"]

[tool.poetry.dependencies]
#python = "3.10.12"
python = "3.10.15"
matplotlib = "*"
pandas = "*"
numpy = "*"
#PIL = "*"
Pillow = "*"
tdqm = "*"
seaborn = "*"
scikit-learn = "*"
torch = "*"
torchvision = "*"
#torch.nn = "*"
#torch.nn.functional = "*"
ipykernel = "*"
keras = "^3.5.0"
keras-core = "^0.1.7"
tensorflow = "^2.17.0"
#gdal = "3.4.1"
#gdal = "*"
pygdal = "3.6.2"
dash = "^2.18.2"
streamlit = "^1.40.0"
dill = "^0.3.9"
opencv-python = "^4.10.0.84"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
